fix: fix broken layout

--- a/packages/client/src/styles/home.css
+++ b/packages/client/src/styles/home.css
@@ -4,7 +4,7 @@ body {
 
 .main-column-app {
   padding-top: 10px;
-  height: 100vh;
+  height: 100%;
   border-right: 1px solid var(--dark-gray);
 }
 
